# lib-dt-apriltags

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README.md  apriltags3.py  build_script.sh  bumpversion.cfg  package.xml  pyproject.toml  setup.py
apriltags3/: __init__.py  apriltags3.py
assets/: build.sh
assets/qemu/arm64v8/: qemu-aarch64-static
dt-apriltags/: __init__.py
dt_apriltags/: apriltags.py
test/: test.py  test_info.yaml
test/test_files/: test_info.yaml
